# pmenu

./: .gitignore  LICENSE  Makefile  README.md  configure  pmenu.py  pyproject.toml  requirements.in  requirements.txt  setup.py
extension/: background.js  content_script.js  manifest.json  pmenu.json
pmenu/: __init__.py  __main__.py  config.py  main.py  mozlz4a.py  native_messager.py  utils.py
scripts/: passmenu2
