[tool.poetry]
name = "pmenu"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tldextract = "^3.3.1"
xdg = "^5.1.1"
lz4 = "^4.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pmenu = "pmenu.main:main"
pmenu-messager = "pmenu.native_messager:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
