[tool.poetry]
name = "pmenu"
version = "0.3.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tldextract = "^3.3.1"
xdg = "^5.1.1"
lz4 = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[tool.poetry.scripts]
pmenu-messager = "pmenu.native_messager:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
